backport: re PR testsuite/49443 (gcc.dg/vect/vect-peel-3.c and vect-peel-4.c fail on IA64 after testsuite change)

ChangeLog:

	Backport from mainline
	2012-07-30  Ulrich Weigand  <ulrich.weigand@linaro.org>
		    Richard Earnshaw  <rearnsha@arm.com>

	* target.def (vector_alignment): New target hook.
	* doc/tm.texi.in (TARGET_VECTOR_ALIGNMENT): Document new hook.
	* doc/tm.texi: Regenerate.
	* targhooks.c (default_vector_alignment): New function.
	* targhooks.h (default_vector_alignment): Add prototype.
	* stor-layout.c (layout_type): Use targetm.vector_alignment.
	* config/arm/arm.c (arm_vector_alignment): New function.
	(TARGET_VECTOR_ALIGNMENT): Define.

	* tree-vect-data-refs.c (vect_update_misalignment_for_peel): Use
	vector type alignment instead of size.
	* tree-vect-loop-manip.c (vect_do_peeling_for_loop_bound): Use
	element type size directly instead of computing it from alignment.
	Fix variable naming and comment.


testsuite/ChangeLog:

	Backport from mainline
	2012-07-30  Ulrich Weigand  <ulrich.weigand@linaro.org>

	* lib/target-supports.exp
	(check_effective_target_vect_natural_alignment): New function.
	* gcc.dg/align-2.c: Only run on targets with natural alignment
	of vector types.
	* gcc.dg/vect/slp-25.c: Adjust tests for targets without natural
	alignment of vector types.

	2011-12-21  Michael Zolotukhin  <michael.v.zolotukhin@intel.com>

	* gcc.dg/vect/vect-peel-1.c: Adjust test diag-scans to fix fail on AVX.
	* gcc.dg/vect/vect-peel-2.c: Ditto.

	2011-06-21  Ira Rosen  <ira.rosen@linaro.org>

	PR testsuite/49443
	* gcc.dg/vect/vect-peel-3.c: Expect to fail on vect_no_align
	targets.
	* gcc.dg/vect/vect-peel-4.c: Likewise.

	2011-06-14  Ira Rosen  <ira.rosen@linaro.org>

	* gcc.dg/vect/vect-peel-3.c: Adjust misalignment values
	for double-word vectors.
	* gcc.dg/vect/vect-peel-4.c: Likewise.

From-SVN: r190296